--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "projectbaclkend1",
   "version": "1.0.0",
-  "description": "",
+  "description": "a backend learning project",
+  "type":"module",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -11,5 +13,8 @@
     "Backend"
   ],
   "author": "devX-shub",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
