--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "projectbaclkend1",
   "version": "1.0.0",
   "description": "a backend learning project",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,5 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
