--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://shubham549m:devX~shub@23@cluster0.ax4ndgk.mongodb.net/
+MONGO_URI = mongodb+srv://shubham549m:@cluster0.ax4ndgk.mongodb.net/
 PORT = 3001
