--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "author": "devX-shub",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
