--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI = mongodb+srv://shubham549m:devX~shub@23@cluster0.ax4ndgk.mongodb.net/
+MONGO_URI = "mongodb+srv://shubham549m:devX~shub@cluster0.ax4ndgk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT = 3001
+CORS_ORIGIN =*
